Closed
Bug 1299396
Opened 9 years ago
Closed 9 years ago
Stylo hits an assertion when a ContentInserted arrives with a comment as the new child.
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla51
| Tracking | Status | |
|---|---|---|
| firefox51 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file)
Regression from bug 1292279.
I planned to land this patch along with bug 1297899, but that's taking a while more it seems, so I'd rather stop others from hitting this.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•9 years ago
|
||
Well, I'd rather reword the commit message to say something like |Don't style non-significant nodes on ContentInserted/Appended|, but you get the idea.
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8786638 [details]
Bug 1299396: Don't style content that is not an element or a text node in ServoStyleSet::StyleNewSubtree.
https://reviewboard.mozilla.org/r/75572/#review73732
Per IRC discussion, let's move this to a node type check in StyleNewSubtree.
Attachment #8786638 -
Flags: review?(bobbyholley) → review-
| Comment hidden (mozreview-request) |
Comment 5•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8786638 [details]
Bug 1299396: Don't style content that is not an element or a text node in ServoStyleSet::StyleNewSubtree.
https://reviewboard.mozilla.org/r/75572/#review73752
Thanks.
Attachment #8786638 -
Flags: review?(bobbyholley) → review+
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/dfc059b71968
Don't style content that is not an element or a text node in ServoStyleSet::StyleNewSubtree. r=bholley
Comment 7•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•