Bug 1299396: Don't style content that is not an element or a text node in ServoStyleSet::StyleNewSubtree. r=bholley

MozReview-Commit-ID: KmcYPFqt48W

--HG--
extra : rebase_source : 0aff142b7522e853a8948820cd2c88d84afe5fb8